--- a/package.json
+++ b/package.json
@@ -14,4 +14,9 @@
     "axios": "^0.20.0",
     "express": "^4.17.1"
   },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.6"
+  }
 }
