--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "url": "https://github.com/DTan13/dtan13.github.io.api.git"
   },
   "homepage": "https://github.com/DTan13/dtan13.github.io.api",
+  "bugs": "https://github.com/DTan13/dtan13.github.io.api/issues",
+  "scripts": {
+    "start": "node src/index.js",
+    "start-dev": "nodemon src/index.js"
+  },
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1"
