--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase-admin": "^9.3.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
